--- a/package.json
+++ b/package.json
@@ -2,7 +2,25 @@
   "name": "@los/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "npx nx serve los --hmr",
+    "dashboard": "npx nx serve dashboard --hmr",
+    "sandbox": "npx nx serve sandbox --hmr",
+    "reinstall": "rmdir node_modules /s /q && rmdir .angular /s /q && del package-lock.json /q &&  npm i",
+    "ng": "ng",
+    "prod": "http-server ./dist/browser -o -g",
+    "prod:static": "http-server ./dist/static -o -g",
+    "build:qa": "ng build --configuration=qa",
+    "build:uat": "ng build --configuration=uat",
+    "build:prod": "ng build --configuration=production",
+    "build": "ng build",
+    "build:stats": "ng build --configuration=production --stats-json && npm run bundle-report",
+    "build:source": "ng build --configuration=production --source-map",
+    "bundle-report": "webpack-bundle-analyzer dist/browser/stats.json -p 8887",
+    "docs": "compodoc -p tsconfig.json",
+    "docs:serve": "compodoc -p tsconfig.json -s",
+    "docs:watch": "compodoc -p tsconfig.json -s -w"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.2.0",
