--- a/nx.json
+++ b/nx.json
@@ -69,7 +69,17 @@
       "e2eTestRunner": "cypress",
       "linter": "eslint",
       "style": "scss",
-      "unitTestRunner": "jest"
+      "unitTestRunner": "jest",
+      "standalone": false
+    },
+    "@nx/angular:library": {
+      "linter": "eslint",
+      "unitTestRunner": "jest",
+      "standalone": false
+    },
+    "@nx/angular:component": {
+      "style": "scss",
+      "standalone": false
     }
   }
 }
