--- a/package.json
+++ b/package.json
@@ -34,6 +34,15 @@
     "@angular/router": "~17.2.0",
     "@angular/ssr": "~17.2.0",
     "@nx/angular": "18.1.3",
+    "@fortawesome/angular-fontawesome": "0.14.1",
+    "@fortawesome/fontawesome-free": "6.5.1",
+    "@fortawesome/fontawesome-svg-core": "6.5.1",
+    "@fortawesome/free-brands-svg-icons": "6.5.1",
+    "@fortawesome/free-regular-svg-icons": "6.5.1",
+    "@fortawesome/free-solid-svg-icons": "6.5.1",
+    "primeicons": "^6.0.1",
+    "primeng": "17.12.0",
+    "ramda": "0.29.1",
     "express": "~4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
