--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@ngneat/until-destroy": "^10.0.0",
     "@nx/angular": "18.1.3",
     "angular-cli-ghpages": "^2.0.0-beta.2",
+    "bootstrap": "^5.3.3",
     "express": "~4.18.2",
     "primeicons": "^6.0.1",
     "primeng": "17.12.0",
