--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-server": "~17.2.0",
     "@angular/router": "~17.2.0",
     "@angular/ssr": "~17.2.0",
+    "@apollo/client": "^3.9.9",
     "@fortawesome/angular-fontawesome": "0.14.1",
     "@fortawesome/fontawesome-free": "6.5.1",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
@@ -44,8 +45,10 @@
     "@ngneat/until-destroy": "^10.0.0",
     "@nx/angular": "18.1.3",
     "angular-cli-ghpages": "^2.0.0-beta.2",
+    "apollo-angular": "^6.0.0",
     "bootstrap": "^5.3.3",
     "express": "~4.18.2",
+    "graphql": "^16.8.1",
     "primeicons": "^6.0.1",
     "primeng": "17.12.0",
     "ramda": "0.29.1",
