--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "$libs": ["./libs"],
+      "$brand": ["libs/brand/src/index.ts"],
+      "$icons": ["libs/icons/src/index.ts"],
       "@dashboard/*": ["apps/dashboard/src/*"],
       "@quoting/*": ["apps/quoting/src/*"],
       "@sandbox/*": ["apps/sandbox/src/*"]
