--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "docs": "compodoc -p tsconfig.json",
     "docs:serve": "compodoc -p tsconfig.json -s",
     "docs:watch": "compodoc -p tsconfig.json -s -w",
+    "generate-graphql": "graphql-codegen",
     "deploy": "npx nx build los --configuration=prod --configuration=production --base-href /mfe/ && angular-cli-ghpages --no-silent --dir=dist/apps/los/browser",
     "deploy:ssr": "ng run financial-status-check:deploy-ssr --routes-file routes.txt && angular-cli-ghpages --no-silent --dir=dist/browser"
   },
@@ -66,6 +67,10 @@
     "@angular/cli": "~17.2.0",
     "@angular/compiler-cli": "~17.2.0",
     "@angular/language-service": "~17.2.0",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript": "^4.0.6",
+    "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
+    "@graphql-codegen/typescript-operations": "^4.2.0",
     "@nx/cypress": "18.1.3",
     "@nx/eslint": "18.1.3",
     "@nx/eslint-plugin": "18.1.3",
