Add users MFE, graphQL integration

--- a/apps/users/tsconfig.editor.json
+++ b/apps/users/tsconfig.editor.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts", "../users/src/app/shared/stores/api.service.ts"],
+  "include": ["src/**/*.ts"],
   "compilerOptions": {},
   "exclude": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts"]
 }
