--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "graphql": "^16.8.1",
     "primeicons": "^6.0.1",
     "primeng": "17.12.0",
-    "ramda": "0.29.1",
+    "ramda": "^0.29.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -84,7 +84,8 @@
     "@swc/helpers": "~0.5.2",
     "@types/express": "4.17.14",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.16.9",
+    "@types/node": "^18.16.9",
+    "@types/ramda": "^0.29.12",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "browser-sync": "^3.0.0",
