--- a/apps/app-shell/project.json
+++ b/apps/app-shell/project.json
@@ -1,31 +1,31 @@
 {
-  "name": "los",
+  "name": "app-shell",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "prefix": "app",
-  "sourceRoot": "apps/los/src",
+  "sourceRoot": "apps/app-shell/src",
   "tags": [],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/los/browser",
-        "index": "apps/los/src/index.html",
-        "main": "apps/los/src/main.ts",
+        "outputPath": "dist/apps/app-shell/browser",
+        "index": "apps/app-shell/src/index.html",
+        "main": "apps/app-shell/src/main.ts",
         "polyfills": ["zone.js"],
-        "tsConfig": "apps/los/tsconfig.app.json",
+        "tsConfig": "apps/app-shell/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
-          "apps/los/src/favicon.ico",
-          "apps/los/src/assets",
+          "apps/app-shell/src/favicon.ico",
+          "apps/app-shell/src/assets",
           {
             "glob": "**/*",
             "input": "libs/masterpage/src/assets",
             "output": "/assets/"
           }
         ],
-        "styles": ["apps/los/src/styles.scss"],
+        "styles": ["apps/app-shell/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -59,10 +59,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "los:build:production"
+          "buildTarget": "app-shell:build:production"
         },
         "development": {
-          "buildTarget": "los:build:development"
+          "buildTarget": "app-shell:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -70,7 +70,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "los:build"
+        "buildTarget": "app-shell:build"
       }
     },
     "lint": {
@@ -80,22 +80,22 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/los/jest.config.ts"
+        "jestConfig": "apps/app-shell/jest.config.ts"
       }
     },
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "los:build"
+        "buildTarget": "app-shell:build"
       }
     },
     "server": {
       "dependsOn": ["build"],
       "executor": "@angular-devkit/build-angular:server",
       "options": {
-        "outputPath": "dist/apps/los/server",
-        "main": "apps/los/server.ts",
-        "tsConfig": "apps/los/tsconfig.server.json",
+        "outputPath": "dist/apps/app-shell/server",
+        "main": "apps/app-shell/server.ts",
+        "tsConfig": "apps/app-shell/tsconfig.server.json",
         "inlineStyleLanguage": "scss"
       },
       "configurations": {
@@ -116,12 +116,12 @@
       "executor": "@angular-devkit/build-angular:ssr-dev-server",
       "configurations": {
         "development": {
-          "browserTarget": "los:build:development",
-          "serverTarget": "los:server:development"
+          "browserTarget": "app-shell:build:development",
+          "serverTarget": "app-shell:server:development"
         },
         "production": {
-          "browserTarget": "los:build:production",
-          "serverTarget": "los:server:production"
+          "browserTarget": "app-shell:build:production",
+          "serverTarget": "app-shell:server:production"
         }
       },
       "defaultConfiguration": "development"
@@ -133,12 +133,12 @@
       },
       "configurations": {
         "development": {
-          "browserTarget": "los:build:development",
-          "serverTarget": "los:server:development"
+          "browserTarget": "app-shell:build:development",
+          "serverTarget": "app-shell:server:development"
         },
         "production": {
-          "browserTarget": "los:build:production",
-          "serverTarget": "los:server:production"
+          "browserTarget": "app-shell:build:production",
+          "serverTarget": "app-shell:server:production"
         }
       },
       "defaultConfiguration": "production"
