Add SRR and prerender

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "docs:serve": "compodoc -p tsconfig.json -s",
     "docs:watch": "compodoc -p tsconfig.json -s -w",
     "generate:models": "graphql-codegen",
+    "ssr:prerender": "npx nx app-shell:prerender --routes-file routes.txt",
+    "ssr:dev": "ng run app-shell:serve-ssr",
+    "ssr:build": "npx nx build app-shell --configuration=production && ng run app-shell:server",
+    "ssr:serve": "node dist/server/main.js",
     "deploy": "npx nx build app-shell --base-href=/mfe/ --configuration=production && angular-cli-ghpages --no-silent --dir=dist/apps/app-shell/browser",
     "deploy:ssr": "ng run financial-status-check:deploy-ssr --routes-file routes.txt && angular-cli-ghpages --no-silent --dir=dist/browser"
   },
