--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@ngneat/until-destroy": "^10.0.0",
     "@nx/angular": "18.1.3",
+    "@types/react": "^18.2.79",
     "angular-cli-ghpages": "^2.0.0-beta.2",
     "apollo-angular": "^6.0.0",
     "bootstrap": "^5.3.3",
