--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "primeng": "17.12.0",
     "ramda": "^0.29.1",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
