--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,9 +20,12 @@
       "$icons": ["libs/icons/src/index.ts"],
       "$masterpage": ["libs/masterpage/src/index.ts"],
       "$state-management": ["libs/state-management/src/index.ts"],
+      "$quote-calculator": ["libs/quote-calculator/src/index.ts"],
+      "@customer/*": ["apps/customer/src/*"],
       "@dashboard/*": ["apps/dashboard/src/*"],
       "@quoting/*": ["apps/quoting/src/*"],
       "@sandbox/*": ["apps/sandbox/src/*"],
+      "@team-member/*": ["apps/team-member/src/*"],
       "@users/*": ["apps/users/src/*"]
     }
   },
