--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
       "$masterpage": ["libs/masterpage/src/index.ts"],
       "$quote-calculator": ["libs/quote-calculator/src/index.ts"],
       "$state-management": ["libs/state-management/src/index.ts"],
+      "$shared": ["libs/shared/src/index.ts"],
       "@customer/*": ["apps/customer/src/*"],
       "@dashboard/*": ["apps/dashboard/src/*"],
       "@quoting/*": ["apps/quoting/src/*"],
