--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: 'https://graphqlzero.almansi.me/api' # Your GraphQL endpoint or schema file
+schema: 'https://graphqlzero.almansi.me/api' # GraphQL endpoint or schema file
 documents: 'apps/users/**/*.graphql'
 generates:
   apps/users/src/app/shared/models/models.ts:
