--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,11 +24,11 @@
       "$state-management": ["libs/state-management/src/index.ts"],
       "@customer/*": ["apps/customer/src/*"],
       "@dashboard/*": ["apps/dashboard/src/*"],
+      "@loan-products/*": ["apps/loan/loan-products/src/*"],
       "@quoting/*": ["apps/quoting/src/*"],
       "@sandbox/*": ["apps/sandbox/src/*"],
       "@team-member/*": ["apps/team-member/src/*"],
-      "@users/*": ["apps/users/src/*"],
-      "@loan-products/*": ["apps/loan/loan-products/src/*"]
+      "@users/*": ["apps/users/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
