--- a/codegen.yml
+++ b/codegen.yml
@@ -1,9 +1,8 @@
 overwrite: true
-schema: 'https://graphqlzero.almansi.me/api' # GraphQL endpoint or schema file
-documents: 'apps/users/**/*.graphql'
+schema: 'https://income-verification-subgraph-dev-egg.cherrypie.alt.meanion.com/' # GraphQL endpoint or schema file
 generates:
-  apps/users/src/app/shared/models/models.ts:
+  apps/loan/loan-products/src/app/shared/models/loan-products.graphql.ts:
     plugins:
-      - 'typescript'
-      - 'typescript-operations'
-      - 'typescript-apollo-angular'
+      - typescript
+      - typescript-operations
+      - typescript-apollo-angular
