--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.2.0",
-    "@angular/common": "~17.2.0",
-    "@angular/compiler": "~17.2.0",
-    "@angular/core": "~17.2.0",
-    "@angular/forms": "~17.2.0",
-    "@angular/platform-browser": "~17.2.0",
-    "@angular/platform-browser-dynamic": "~17.2.0",
-    "@angular/platform-server": "~17.2.0",
-    "@angular/router": "~17.2.0",
-    "@angular/ssr": "~17.2.0",
+    "@angular/animations": "18.0.2",
+    "@angular/common": "18.0.2",
+    "@angular/compiler": "18.0.2",
+    "@angular/core": "18.0.2",
+    "@angular/forms": "18.0.2",
+    "@angular/platform-browser": "18.0.2",
+    "@angular/platform-browser-dynamic": "18.0.2",
+    "@angular/platform-server": "18.0.2",
+    "@angular/router": "18.0.2",
+    "@angular/ssr": "18.0.3",
     "@apollo/client": "^3.9.9",
     "@fortawesome/angular-fontawesome": "0.14.1",
     "@fortawesome/fontawesome-free": "6.5.1",
@@ -48,7 +48,7 @@
     "@fortawesome/free-regular-svg-icons": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@ngneat/until-destroy": "^10.0.0",
-    "@nx/angular": "18.1.3",
+    "@nx/angular": "19.2.3",
     "@types/react": "^18.2.79",
     "angular-cli-ghpages": "^2.0.0-beta.2",
     "apollo-angular": "^6.0.0",
@@ -64,49 +64,49 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.2.0",
-    "@angular-devkit/core": "~17.2.0",
-    "@angular-devkit/schematics": "~17.2.0",
-    "@angular-eslint/eslint-plugin": "~17.0.0",
-    "@angular-eslint/eslint-plugin-template": "~17.0.0",
-    "@angular-eslint/template-parser": "~17.0.0",
+    "@angular-devkit/build-angular": "18.0.3",
+    "@angular-devkit/core": "18.0.3",
+    "@angular-devkit/schematics": "18.0.3",
+    "@angular-eslint/eslint-plugin": "18.0.1",
+    "@angular-eslint/eslint-plugin-template": "18.0.1",
+    "@angular-eslint/template-parser": "18.0.1",
     "@angular/cli": "~17.2.0",
-    "@angular/compiler-cli": "~17.2.0",
-    "@angular/language-service": "~17.2.0",
+    "@angular/compiler-cli": "18.0.2",
+    "@angular/language-service": "18.0.2",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@graphql-codegen/typescript-operations": "^4.2.0",
-    "@nx/cypress": "18.1.3",
-    "@nx/eslint": "18.1.3",
-    "@nx/eslint-plugin": "18.1.3",
-    "@nx/jest": "18.1.3",
-    "@nx/js": "18.1.3",
-    "@nx/web": "18.1.3",
-    "@nx/workspace": "18.1.3",
-    "@schematics/angular": "~17.2.0",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@nx/cypress": "19.2.3",
+    "@nx/eslint": "19.2.3",
+    "@nx/eslint-plugin": "19.2.3",
+    "@nx/jest": "19.2.3",
+    "@nx/js": "19.2.3",
+    "@nx/web": "19.2.3",
+    "@nx/workspace": "19.2.3",
+    "@schematics/angular": "18.0.3",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.11",
     "@types/express": "4.17.14",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.16.9",
     "@types/ramda": "^0.29.12",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@typescript-eslint/eslint-plugin": "7.3.0",
+    "@typescript-eslint/parser": "7.3.0",
     "browser-sync": "^3.0.0",
-    "cypress": "^13.6.6",
-    "eslint": "~8.48.0",
+    "cypress": "13.8.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "jest-preset-angular": "~14.0.3",
-    "nx": "18.1.3",
+    "jest-preset-angular": "14.1.0",
+    "nx": "19.2.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.2",
+    "typescript": "5.4.5",
     "webpack-bundle-analyzer": "^4.10.1"
   }
 }
