--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/router": "18.0.2",
     "@angular/ssr": "18.0.3",
     "@apollo/client": "^3.9.9",
+    "@aws/clickstream-web": "^0.12.1",
     "@fortawesome/angular-fontawesome": "0.14.1",
     "@fortawesome/fontawesome-free": "6.5.1",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
