--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "docs": "compodoc -p tsconfig.json",
     "docs:serve": "compodoc -p tsconfig.json -s",
     "docs:watch": "compodoc -p tsconfig.json -s -w",
-    "generate:models": "graphql-codegen",
+    "generate": "npm run generate:loan",
+    "generate:loan": "graphql-codegen --config apps/loan/loan-products/src/app/shared/models/loan-products.codegen.ts",
     "ssr:prerender": "npx nx app-shell:prerender --routes-file routes.txt",
     "ssr:dev": "ng run app-shell:serve-ssr",
     "ssr:build": "npx nx build app-shell --configuration=production && ng run app-shell:server",
