--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@types/ramda": "^0.29.12",
     "@typescript-eslint/eslint-plugin": "7.3.0",
     "@typescript-eslint/parser": "7.3.0",
+    "@typescript-eslint/utils": "^8.0.0-alpha.28",
     "browser-sync": "^3.0.0",
     "cypress": "13.8.0",
     "eslint": "8.57.0",
