--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "docs": "compodoc -p tsconfig.json",
     "docs:serve": "compodoc -p tsconfig.json -s",
     "docs:watch": "compodoc -p tsconfig.json -s -w",
-    "models": "npm run models:loan",
+    "models": "npm run models:loan && prettier --write libs/models/src/lib/**/*.{ts,tsx,js,jsx,json,scss,css,html,md}",
     "models:loan": "graphql-codegen --config libs/models/src/lib/loan-products/loan-products.codegen.ts",
     "ssr:prerender": "npx nx app-shell:prerender --routes-file routes.txt",
     "ssr:dev": "ng run app-shell:serve-ssr",
