--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "docs": "compodoc -p tsconfig.json",
     "docs:serve": "compodoc -p tsconfig.json -s",
     "docs:watch": "compodoc -p tsconfig.json -s -w",
-    "models": "graphql-codegen --verbose --config libs/models/src/lib/models.codegen.ts && prettier --write libs/models/src/lib/**/*.{ts,tsx,js,jsx,json,scss,css,html,md}",
+    "models:graph": "graphql-codegen --verbose --config libs/models/src/lib/models.codegen.ts && prettier --write libs/models/src/lib/**/*.{ts,tsx,js,jsx,json,scss,css,html,md}",
+    "models:rest": "",
     "ssr:prerender": "npx nx app-shell:prerender --routes-file routes.txt",
     "ssr:dev": "ng run app-shell:serve-ssr",
     "ssr:build": "npx nx build app-shell --configuration=production && ng run app-shell:server",
@@ -62,6 +63,7 @@
     "ramda": "^0.29.1",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
+    "tsc": "^2.0.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -109,7 +111,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.4.5",
+    "typescript": "^5.4.5",
     "webpack-bundle-analyzer": "^4.10.1"
   }
 }
