Output TS models and graph stubs

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "docs": "compodoc -p tsconfig.json",
     "docs:serve": "compodoc -p tsconfig.json -s",
     "docs:watch": "compodoc -p tsconfig.json -s -w",
-    "models:graph": "graphql-codegen --verbose --config libs/models/src/lib/models.codegen.ts && prettier --write libs/models/src/lib/**/*.{ts,tsx,js,jsx,json,scss,css,html,md}",
-    "models:rest": "",
+    "models:graph": "graphql-codegen --verbose --debug --config libs/models/src/lib/models.codegen.ts && npx gqlg --schemaFilePath libs/models/src/lib/temp/global.graphql --destDirPath libs/models/src/lib/temp/gqlg/ --depthLimit 2 && graphql-codegen --verbose --debug --config libs/models/src/lib/models2.codegen.ts && prettier --write libs/models/src/lib/**/*.{ts,tsx,js,jsx,json,scss,css,html,md,gql}",
+    "models:graph2": "graphql-codegen --verbose --debug --config libs/models/src/lib/models2.codegen.ts",
     "ssr:prerender": "npx nx app-shell:prerender --routes-file routes.txt",
     "ssr:dev": "ng run app-shell:serve-ssr",
     "ssr:build": "npx nx build app-shell --configuration=production && ng run app-shell:server",
@@ -57,6 +57,7 @@
     "apollo-angular": "^6.0.0",
     "bootstrap": "^5.3.3",
     "express": "~4.18.2",
+    "gql-generator": "^2.0.0",
     "graphql": "^16.8.1",
     "primeicons": "^6.0.1",
     "primeng": "17.12.0",
@@ -78,6 +79,8 @@
     "@angular/compiler-cli": "18.0.2",
     "@angular/language-service": "18.0.2",
     "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/near-operation-file-preset": "^3.0.0",
+    "@graphql-codegen/schema-ast": "^4.1.0",
     "@graphql-codegen/typescript": "^4.0.9",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@graphql-codegen/typescript-operations": "^4.2.3",
