Clean up package file

--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "docs:serve": "compodoc -p tsconfig.json -s",
     "docs:watch": "compodoc -p tsconfig.json -s -w",
     "models:graph": "node libs/models/src/lib/utils/pre-processing.util.js && graphql-codegen --verbose --debug --config libs/models/src/lib/models-step1.codegen.ts && npx gqlg --schemaFilePath libs/models/src/lib/dist/global.graphql --destDirPath libs/models/src/lib/temp/gqlg/ --depthLimit 2 && graphql-codegen --verbose --debug --config libs/models/src/lib/models-step2.codegen.ts && node libs/models/src/lib/utils/post-processing.util.js && prettier --write libs/models/src/lib/**/*.{ts,tsx,js,jsx,json,scss,css,html,md,gql}",
-    "models:graph2": "graphql-codegen --verbose --debug --config libs/models/src/lib/models2.codegen.ts",
+    "models:rest": "",
     "ssr:prerender": "npx nx app-shell:prerender --routes-file routes.txt",
     "ssr:dev": "ng run app-shell:serve-ssr",
     "ssr:build": "npx nx build app-shell --configuration=production && ng run app-shell:server",
     "ssr:serve": "node dist/server/main.js",
     "deploy": "npx nx build app-shell --base-href=/mfe/ --verbose --configuration=production && angular-cli-ghpages --no-silent --dir=dist/apps/app-shell/browser",
-    "deploy:ssr": "ng run financial-status-check:deploy-ssr --routes-file routes.txt && angular-cli-ghpages --no-silent --dir=dist/browser"
+    "deploy:ssr": "ng run mfe-starter:deploy-ssr --routes-file routes.txt && angular-cli-ghpages --no-silent --dir=dist/browser"
   },
   "private": true,
   "dependencies": {
