--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "sandbox": "npx nx serve sandbox",
     "reinstall": "rmdir node_modules /s /q && rmdir .angular /s /q && del package-lock.json /q &&  npm i",
     "ng": "ng",
-    "prod": "http-server ./dist/browser -o -g",
+    "prod": "http-server ./dist/apps/app-shell/browser -o -g",
     "prod:static": "http-server ./dist/static -o -g",
     "build:qa": "npx nx build app-shell --configuration=qa",
     "build:uat": "npx nx build app-shell --configuration=uat",
-    "build:prod": "npx nx build app-shell --configuration=prod",
+    "build:prod": "npx nx build app-shell --configuration=prod --base-href=/",
+    "build:prod:assets": "npx nx build assets --configuration=prod --base-href=/",
+    "build:prod:loan-products": "npx nx build loan-products --configuration=prod --base-href=/",
     "build": "ng build",
     "build:stats": "npx nx build app-shell --stats-json && npm run bundle-report",
     "build:source": "npx nx build app-shell --configuration=production --source-map",
