--- a/apps/loan/assets/project.json
+++ b/apps/loan/assets/project.json
@@ -7,27 +7,41 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "executor": "@nx/angular:webpack-browser",
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/loan/assets",
         "index": "apps/loan/assets/src/index.html",
         "main": "apps/loan/assets/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/loan/assets/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
           {
             "glob": "**/*",
-            "input": "apps/loan/assets/public"
+            "input": "apps/loan/assets/public",
+            "output": "."
           }
         ],
-        "styles": ["apps/loan/assets/src/styles.scss"],
-        "scripts": []
+        "styles": [
+          "apps/loan/assets/src/styles.scss"
+        ],
+        "scripts": [],
+        "customWebpackConfig": {
+          "path": "apps/loan/assets/webpack.config.js"
+        },
+        "commonChunk": false
       },
       "configurations": {
         "production": {
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "customWebpackConfig": {
+            "path": "apps/loan/assets/webpack.prod.config.js"
+          }
         },
         "development": {
           "buildOptimizer": false,
@@ -41,7 +55,7 @@
       "defaultConfiguration": "production"
     },
     "serve": {
-      "executor": "@angular-devkit/build-angular:dev-server",
+      "executor": "@nx/angular:dev-server",
       "configurations": {
         "production": {
           "buildTarget": "assets:build:production"
@@ -50,12 +64,17 @@
           "buildTarget": "assets:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "port": 4201,
+        "publicHost": "http://localhost:4201"
+      }
     },
     "extract-i18n": {
-      "executor": "@angular-devkit/build-angular:extract-i18n",
+      "executor": "ngx-build-plus:extract-i18n",
       "options": {
-        "buildTarget": "assets:build"
+        "buildTarget": "assets:build",
+        "extraWebpackConfig": "apps/loan/assets/webpack.config.js"
       }
     },
     "lint": {
@@ -63,7 +82,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/loan/assets/jest.config.ts"
       }
