--- a/apps/loan/loan-products/project.json
+++ b/apps/loan/loan-products/project.json
@@ -7,25 +7,38 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "executor": "@nx/angular:webpack-browser",
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/loan/loan-products/browser",
         "index": "apps/loan/loan-products/src/index.html",
         "main": "apps/loan/loan-products/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/loan/loan-products/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
           "apps/loan/loan-products/src/favicon.ico",
           "apps/loan/loan-products/src/assets"
         ],
-        "styles": ["apps/loan/loan-products/src/styles.scss"],
-        "scripts": []
+        "styles": [
+          "apps/loan/loan-products/src/styles.scss"
+        ],
+        "scripts": [],
+        "customWebpackConfig": {
+          "path": "apps/loan/loan-products/webpack.config.js"
+        },
+        "commonChunk": false
       },
       "configurations": {
         "production": {
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "customWebpackConfig": {
+            "path": "apps/loan/loan-products/webpack.prod.config.js"
+          }
         },
         "development": {
           "buildOptimizer": false,
@@ -39,7 +52,7 @@
       "defaultConfiguration": "production"
     },
     "serve": {
-      "executor": "@angular-devkit/build-angular:dev-server",
+      "executor": "@nx/angular:dev-server",
       "configurations": {
         "production": {
           "buildTarget": "loan-products:build:production"
@@ -48,12 +61,17 @@
           "buildTarget": "loan-products:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "port": 4202,
+        "publicHost": "http://localhost:4202"
+      }
     },
     "extract-i18n": {
-      "executor": "@angular-devkit/build-angular:extract-i18n",
+      "executor": "ngx-build-plus:extract-i18n",
       "options": {
-        "buildTarget": "loan-products:build"
+        "buildTarget": "loan-products:build",
+        "extraWebpackConfig": "apps/loan/loan-products/webpack.config.js"
       }
     },
     "lint": {
@@ -61,7 +79,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/loan/loan-products/jest.config.ts"
       }
@@ -73,7 +93,9 @@
       }
     },
     "server": {
-      "dependsOn": ["build"],
+      "dependsOn": [
+        "build"
+      ],
       "executor": "@angular-devkit/build-angular:server",
       "options": {
         "outputPath": "dist/apps/loan/loan-products/server",
@@ -112,7 +134,9 @@
     "prerender": {
       "executor": "@angular-devkit/build-angular:prerender",
       "options": {
-        "routes": ["/"]
+        "routes": [
+          "/"
+        ]
       },
       "configurations": {
         "development": {
