--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ssr:build": "npx nx build app-shell --configuration=production && ng run app-shell:server",
     "ssr:serve": "node dist/server/main.js",
     "deploy": "npx nx build app-shell --base-href=/mfe/ --verbose --configuration=production && angular-cli-ghpages --no-silent --dir=dist/apps/app-shell/browser",
-    "deploy:ssr": "ng run mfe-starter:deploy-ssr --routes-file routes.txt && angular-cli-ghpages --no-silent --dir=dist/browser"
+    "deploy:ssr": "ng run mfe-starter:deploy-ssr --routes-file routes.txt && angular-cli-ghpages --no-silent --dir=dist/browser",
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
@@ -71,6 +72,7 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
+    "@angular-architects/module-federation": "^18.0.4",
     "@angular-devkit/build-angular": "18.0.3",
     "@angular-devkit/core": "18.0.3",
     "@angular-devkit/schematics": "18.0.3",
@@ -112,6 +114,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "14.1.0",
+    "ngx-build-plus": "^18.0.0",
     "nx": "19.2.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
