--- a/apps/app-shell/project.json
+++ b/apps/app-shell/project.json
@@ -8,16 +8,12 @@
   "targets": {
     "build": {
       "executor": "@nx/angular:webpack-browser",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/app-shell/browser",
         "index": "apps/app-shell/src/index.html",
         "main": "apps/app-shell/src/main.ts",
-        "polyfills": [
-          "zone.js"
-        ],
+        "polyfills": ["zone.js"],
         "tsConfig": "apps/app-shell/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -29,9 +25,7 @@
             "output": "/assets/"
           }
         ],
-        "styles": [
-          "apps/app-shell/src/styles.scss"
-        ],
+        "styles": ["apps/app-shell/src/styles.scss"],
         "scripts": [],
         "customWebpackConfig": {
           "path": "apps/app-shell/webpack.config.js"
@@ -68,8 +62,8 @@
       },
       "defaultConfiguration": "development",
       "options": {
-        "port": 4201,
-        "publicHost": "http://localhost:4201"
+        "port": 4200,
+        "publicHost": "http://localhost:4200"
       }
     },
     "extract-i18n": {
@@ -84,9 +78,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/app-shell/jest.config.ts"
       }
@@ -98,9 +90,7 @@
       }
     },
     "server": {
-      "dependsOn": [
-        "build"
-      ],
+      "dependsOn": ["build"],
       "executor": "@angular-devkit/build-angular:server",
       "options": {
         "outputPath": "dist/apps/app-shell/browser/server",
@@ -139,9 +129,7 @@
     "prerender": {
       "executor": "@angular-devkit/build-angular:prerender",
       "options": {
-        "routes": [
-          "/"
-        ]
+        "routes": ["/"]
       },
       "configurations": {
         "development": {
