--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "sandbox": "npx nx serve sandbox",
     "reinstall": "rmdir node_modules /s /q && rmdir .angular /s /q && del package-lock.json /q &&  npm i",
     "ng": "ng",
-    "prod": "http-server ./dist/browser -o -g",
+    "prod": "http-server ./dist/apps/app-shell/browser -o -g",
     "prod:static": "http-server ./dist/static -o -g",
     "build:qa": "npx nx build app-shell --configuration=qa",
     "build:uat": "npx nx build app-shell --configuration=uat",
-    "build:prod": "npx nx build app-shell --configuration=prod",
+    "build:prod": "npx nx build app-shell --configuration=prod --base-href=/",
+    "build:prod:assets": "npx nx build assets --configuration=prod --base-href=/",
+    "build:prod:loan-products": "npx nx build loan-products --configuration=prod --base-href=/",
     "build": "ng build",
     "build:stats": "npx nx build app-shell --stats-json && npm run bundle-report",
     "build:source": "npx nx build app-shell --configuration=production --source-map",
@@ -20,14 +22,14 @@
     "docs": "compodoc -p tsconfig.json",
     "docs:serve": "compodoc -p tsconfig.json -s",
     "docs:watch": "compodoc -p tsconfig.json -s -w",
-    "models": "npm run models:loan && prettier --write libs/models/src/lib/**/*.{ts,tsx,js,jsx,json,scss,css,html,md}",
-    "models:loan": "graphql-codegen --config libs/models/src/lib/loan-products/loan-products.codegen.ts",
+    "models:graph": "node libs/models/src/lib/utils/pre-processing.util.js && graphql-codegen --verbose --debug --config libs/models/src/lib/models-step1.codegen.ts && npx gqlg --schemaFilePath libs/models/src/lib/dist/global.graphql --destDirPath libs/models/src/lib/temp/gqlg/ --depthLimit 2 && graphql-codegen --verbose --debug --config libs/models/src/lib/models-step2.codegen.ts && node libs/models/src/lib/utils/post-processing.util.js && prettier --write libs/models/src/lib/**/*.{ts,tsx,js,jsx,json,scss,css,html,md,gql}",
+    "models:rest": "",
     "ssr:prerender": "npx nx app-shell:prerender --routes-file routes.txt",
     "ssr:dev": "ng run app-shell:serve-ssr",
     "ssr:build": "npx nx build app-shell --configuration=production && ng run app-shell:server",
     "ssr:serve": "node dist/server/main.js",
     "deploy": "npx nx build app-shell --base-href=/mfe/ --verbose --configuration=production && angular-cli-ghpages --no-silent --dir=dist/apps/app-shell/browser",
-    "deploy:ssr": "ng run financial-status-check:deploy-ssr --routes-file routes.txt && angular-cli-ghpages --no-silent --dir=dist/browser"
+    "deploy:ssr": "ng run mfe-starter:deploy-ssr --routes-file routes.txt && angular-cli-ghpages --no-silent --dir=dist/browser"
   },
   "private": true,
   "dependencies": {
@@ -49,6 +51,7 @@
     "@fortawesome/free-brands-svg-icons": "6.5.1",
     "@fortawesome/free-regular-svg-icons": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
+    "@graphql-codegen/introspection": "^4.0.3",
     "@ngneat/until-destroy": "^10.0.0",
     "@nx/angular": "19.2.3",
     "@types/react": "^18.2.79",
@@ -56,12 +59,14 @@
     "apollo-angular": "^6.0.0",
     "bootstrap": "^5.3.3",
     "express": "~4.18.2",
+    "gql-generator": "^2.0.0",
     "graphql": "^16.8.1",
     "primeicons": "^6.0.1",
     "primeng": "17.12.0",
     "ramda": "^0.29.1",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
+    "tsc": "^2.0.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -76,9 +81,11 @@
     "@angular/compiler-cli": "18.0.2",
     "@angular/language-service": "18.0.2",
     "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/typescript": "^4.0.6",
+    "@graphql-codegen/near-operation-file-preset": "^3.0.0",
+    "@graphql-codegen/schema-ast": "^4.1.0",
+    "@graphql-codegen/typescript": "^4.0.9",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
-    "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@graphql-codegen/typescript-operations": "^4.2.3",
     "@nx/cypress": "19.2.3",
     "@nx/eslint": "19.2.3",
     "@nx/eslint-plugin": "19.2.3",
@@ -109,7 +116,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.4.5",
+    "typescript": "^5.4.5",
     "webpack-bundle-analyzer": "^4.10.1"
   }
 }
