Make dynamic module federation configurable

--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "npx nx serve app-shell",
-    "start:all": "concurrently \"npx nx serve app-shell\" \"npx nx serve assets\" \"npx nx serve loan-products\"",
-    "dashboard": "npx nx serve dashboard",
-    "sandbox": "npx nx serve sandbox",
+    "start": "npm run env && npx nx serve app-shell",
+    "start:all": "npm run env && concurrently \"npx nx serve app-shell\" \"npx nx serve assets\" \"npx nx serve loan-products\"",
     "reinstall": "rmdir node_modules /s /q && rmdir .angular /s /q && del package-lock.json /q &&  npm i",
     "ng": "ng",
+    "env": "node environment-load.config.js",
     "prod": "http-server ./dist/apps/app-shell/browser -o -g",
     "prod:static": "http-server ./dist/static -o -g",
     "build:qa": "npx nx build app-shell --configuration=qa",
