Add dynamic module federation, environment config (#10)
* Successful build

* Add shared libraries

* Fix selector collisions

* Get proper graph version set

* Hoist routing logic to app shell

* Fix root collision issue with no content page

* Add support for dynamic environment config

* Make dynamic module federation configurable

* Finalize ENV handling

* Update documentation

* Remove unique host ID

--- a/apps/app-shell/project.json
+++ b/apps/app-shell/project.json
@@ -7,7 +7,7 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "@angular-devkit/build-angular:browser",
+      "executor": "@nx/angular:webpack-browser",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/app-shell/browser",
@@ -26,11 +26,18 @@
           }
         ],
         "styles": ["apps/app-shell/src/styles.scss"],
-        "scripts": []
+        "scripts": [],
+        "customWebpackConfig": {
+          "path": "apps/app-shell/webpack.config.js"
+        },
+        "commonChunk": false
       },
       "configurations": {
         "production": {
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "customWebpackConfig": {
+            "path": "apps/app-shell/webpack.prod.config.js"
+          }
         },
         "development": {
           "buildOptimizer": false,
@@ -44,7 +51,7 @@
       "defaultConfiguration": "production"
     },
     "serve": {
-      "executor": "@angular-devkit/build-angular:dev-server",
+      "executor": "@nx/angular:dev-server",
       "configurations": {
         "production": {
           "buildTarget": "app-shell:build:production"
@@ -53,12 +60,17 @@
           "buildTarget": "app-shell:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "port": 4200,
+        "publicHost": "http://localhost:4200"
+      }
     },
     "extract-i18n": {
-      "executor": "@angular-devkit/build-angular:extract-i18n",
+      "executor": "ngx-build-plus:extract-i18n",
       "options": {
-        "buildTarget": "app-shell:build"
+        "buildTarget": "app-shell:build",
+        "extraWebpackConfig": "apps/app-shell/webpack.config.js"
       }
     },
     "lint": {
