--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "license": "MIT",
   "scripts": {
     "start": "npx nx serve app-shell",
-    "dashboard": "npx nx serve dashboard",
-    "sandbox": "npx nx serve sandbox",
+    "start:all": "concurrently \"npx nx serve app-shell\" \"npx nx serve assets\" \"npx nx serve loan-products\"",
     "reinstall": "rmdir node_modules /s /q && rmdir .angular /s /q && del package-lock.json /q &&  npm i",
     "ng": "ng",
+    "env": "node environment-load.config.js",
     "prod": "http-server ./dist/apps/app-shell/browser -o -g",
     "prod:static": "http-server ./dist/static -o -g",
     "build:qa": "npx nx build app-shell --configuration=qa",
@@ -29,7 +29,8 @@
     "ssr:build": "npx nx build app-shell --configuration=production && ng run app-shell:server",
     "ssr:serve": "node dist/server/main.js",
     "deploy": "npx nx build app-shell --base-href=/mfe/ --verbose --configuration=production && angular-cli-ghpages --no-silent --dir=dist/apps/app-shell/browser",
-    "deploy:ssr": "ng run mfe-starter:deploy-ssr --routes-file routes.txt && angular-cli-ghpages --no-silent --dir=dist/browser"
+    "deploy:ssr": "ng run mfe-starter:deploy-ssr --routes-file routes.txt && angular-cli-ghpages --no-silent --dir=dist/browser",
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
@@ -71,6 +72,7 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
+    "@angular-architects/module-federation": "^18.0.4",
     "@angular-devkit/build-angular": "18.0.3",
     "@angular-devkit/core": "18.0.3",
     "@angular-devkit/schematics": "18.0.3",
@@ -105,6 +107,7 @@
     "@typescript-eslint/parser": "7.3.0",
     "@typescript-eslint/utils": "^8.0.0-alpha.28",
     "browser-sync": "^3.0.0",
+    "concurrently": "^8.2.2",
     "cypress": "13.8.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -112,6 +115,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "14.1.0",
+    "ngx-build-plus": "^18.0.0",
     "nx": "19.2.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
